# falkordb-lite

./: .gitignore  .spellcheck.yml  .wordlist.txt  README.md  TROUBLESHOOTING.md  requirements.txt  setup.cfg  setup.py  verify_install.py  wordlist.dic
.github/: INSTRUCTIONS.md  README.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml  spellcheck.yml
build_scripts/: update_redis_server.py
docs/: ASYNC_API.md
examples/: async_example.py
redislite/: __init__.py  async_client.py  async_falkordb_client.py  client.py  falkordb_client.py
tests/: test_async_falkordb.py  test_client.py  test_configuration.py  test_slave.py
