[metadata]
author = FalkorDB
author_email = roi@falkordb.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
description = FalkorDB embedded in a Python package
keywords = falkordb redis graph database cypher embedded python
license = BSD License
license_file = LICENSE.txt
long_description = file:README.md
long_description_content_type = text/markdown
name = falkordblite
project_urls =
    Homepage = https://www.falkordb.com/
    Documentation = https://docs.falkordb.com/
    Source = https://github.com/FalkorDB/falkordblite
url = https://github.com/FalkorDB/falkordblite
version = 0.3.0

[options]
install_requires=
    redis>=4.5
    falkordb>=1.2.0
    psutil
    setuptools>38.0
packages=
    redislite
python_requires = >=3.12.0

[screwdrivercd.version]
version_type = sdv4_SD_BUILD
